--- a/maply-user-service/src/main/resources/application.yml
+++ b/maply-user-service/src/main/resources/application.yml
@@ -20,3 +20,9 @@ logging:
       springframework:
         data:
           r2dbc: DEBUG
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
